# limestone

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: ci-build.yml
cmake/: CompileOptions.cmake  FindRocksDB.cmake
docs/: 20220906-limestone-level0_ja.md  datastore-if.md  dblog-repair_ja.md  limestone-wal_ja.md  tglogutil-compaction-man.md  tglogutil-repair-man.md  tglogutil_ja.md
include/limestone/: error_code.h  logging.h  status.h
include/limestone/api/: backup.h  backup_detail.h  configuration.h  cursor.h  datastore.h  epoch_id_type.h  epoch_tag.h  file_set_entry.h  large_object_input.h  large_object_view.h  log_channel.h  log_entry.h  restore_progress.h  snapshot.h  storage_id_type.h  tag_repository.h  types.h  write_version_type.h
include/limestone/detail/: configuration.h  cursor.h  epoch_id_type.h  epoch_tag.h  large_object_input.h  large_object_view.h  snapshot.h  storage_id_type.h  tag_repository.h  types.h  write_version_type.h
src/: CMakeLists.txt
src/limestone/: backup.cpp  backup_detail.cpp  configuration.cpp  cursor.cpp  datastore.cpp  datastore_format.cpp  datastore_recover.cpp  datastore_restore.cpp  datastore_snapshot.cpp  dblog_scan.cpp  dblog_scan.h  internal.h  leveldb_wrapper.h  log_channel.cpp  log_entry.h  logging_helper.h  parse_wal_file.cpp  snapshot.cpp  sortdb_wrapper.h  tag_repository.cpp  write_version_type.cpp
src/limestone/dblogutil/: dblogutil.cpp
test/: CMakeLists.txt  DatastoreTest.cpp  LogAndRecoverOffByOneTest.cpp  LogAndRecoverTest.cpp  LogChannelTest.cpp  TestRoot.h  main.cpp  test_root.h
test/limestone/: log_channel_test.cpp
test/limestone/api/: datastore_test.cpp  log_and_recover_off_by_one_test.cpp  log_and_recover_test.cpp  logging_test.cpp  multiple_recover_test.cpp
test/limestone/epoch/: callback_test.cpp  finish_soon_test.cpp  proceed_test.cpp  with_log_channel_test.cpp
test/limestone/log/: dblog_scan_test.cpp  durable_test.cpp  log_channel_test.cpp  log_dir_test.cpp  log_entry_4_LevelDB_test.cpp  log_entry_test.cpp  log_entry_type_test.cpp  rotate_test.cpp  testdata.cpp
test/limestone/utils/: dblogutil_compaction_test.cpp  dblogutil_test.cpp  logging_helper_test.cpp
